--- a/MVC6amStarBatch/MVC6amStarBatch.csproj
+++ b/MVC6amStarBatch/MVC6amStarBatch.csproj
@@ -138,6 +138,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DepartmentModel.cs" />
+    <Compile Include="Models\EmpDeptModel.cs" />
     <Compile Include="Models\EmployeeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -158,6 +160,8 @@
     <Content Include="Views\New\SendMultipleObject.cshtml" />
     <Content Include="Views\New\SendObjectViewModel.cshtml" />
     <Content Include="Views\New\SendMultipleObjectViewModel.cshtml" />
+    <Content Include="Views\New\SendMultipleModel.cshtml" />
+    <Content Include="Views\New\ShowEmployee.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
