--- a/CodeFirstApproach/CodeFirstApproach.csproj
+++ b/CodeFirstApproach/CodeFirstApproach.csproj
@@ -187,6 +187,7 @@
     <Content Include="scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Default\Index.cshtml" />
+    <Content Include="Views\Default\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
